# datatypes

./: .gitignore  Makefile  TODO.org  pyproject.toml  setup.cfg
datatypes/: __init__.py  annotations.py  class_.py  compare.py  constructor.py  datatype.py  expression.py  magic.py  match.py  operators.py  placeholder.py  util.py
datatypes/protocols/: __init__.py  case.py  compare.py  match.py  placeholders.py  run.py  substitute.py
notebooks/: 0-2018-08-21-bf-poc-exploration.ipynb  1-2018-08-21-bf-maybe-monad.ipynb  2-2018-08-21-bf-result-monad.ipynb  3-2018-08-21-bf-match-exploration.ipynb  polymorphic.ipynb  protocol-functions.ipynb  semantic-experiments.ipynb
notebooks/demo/: datatype-simple-example.ipynb  lisp-interpreter.ipynb  match-syntax-examples.ipynb  placeholders-example.ipynb
notebooks/util/: __init__.py
tests/: test_datatypes.py  test_expression.py  test_match.py  test_placeholder.py
