[tool.poetry]
name = "datatypes"
version = "0.1.0"
description = "ADTs, pattern matching syntax and 33nd Degree Beazlean meta-magic ∴"
license = "MIT"
authors = ["Beta Faccion <betafcc@gmail.com>"]

readme = 'README.rst'
repository = 'https://github.com/betafcc/datatypes'

keywords = ['adt', 'lazy', 'haskell', 'rust', 'pattern matching']

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]
ipython = "^6.5"
tornado = "<5"
jupyterlab = "^0.34.0"
mypy = "^0.620.0"
flake8 = "^3.5"
pytest = "^3.7"
black = "^18.3-alpha.0"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| notebooks
)/
'''
